# career_navigator_ai

./: low_level_design.md
backend/: pyproject.toml
frontend/: package-lock.json
frontend/src/: index.css
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: Navbar.tsx
frontend/src/pages/: CareerGuidance.tsx  Dashboard.tsx  MockInterview.tsx  ResumeAnalysis.tsx
frontend/src/styles/: animations.css  global.css
ppt/: presentation_content.md  presentation_speech.md
