[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "beanie>=2.0.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.1.3",
    "langgraph>=1.0.6",
    "motor>=3.7.1",
    "pypdf2>=3.0.1",
    "python-jose>=3.5.0",
]
